auth/auth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: auth
    environment: prod
  name: auth
  namespace: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: auth
      environment: prod
  template:
    metadata:
      labels:
        k8s-app: auth
        environment: prod
    spec:
      containers:
      - image: quay.io/dhtech/authservice:v1.2
        imagePullPolicy: Always
        command:
        - /go/bin/app
        - --ldap_server=ldap-master.tech.dreamhack.se:636
        - --ldap_server_name=ldap-master.tech.dreamhack.se
        - --ldap_bind=uid=%s,ou=people,dc=tech,dc=dreamhack,dc=se
        - --ldap_base=dc=dreamhack,dc=se
        - --vault_renew=6h
        - --audit_host=ircbot.tech.dreamhack.se:9007
        - --vault_group_map={"cn=services,ou=groups,dc=event,dc=dreamhack,dc=se":"services","cn=tech,ou=groups,dc=event,dc=dreamhack,dc=se":"tech"}
        volumeMounts:
        - mountPath: /etc/ssl/certs
          name: ssl-certs
        name: auth
        readinessProbe:
          tcpSocket:
            port: 1214
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 1214
          periodSeconds: 10
      restartPolicy: Always
      volumes:
      - name: ssl-certs
        hostPath:
          path: /etc/ssl/certs/
