auth/auth-service-dev.yml
---
apiVersion: v1
kind: Service
metadata:
  name: auth-dev
  namespace: auth
  labels:
    k8s-app: auth
    environment: dev
spec:
  ports:
  - port: 1214
    name: grpc
    protocol: TCP
    targetPort: 1214
  selector:
    k8s-app: auth
    environment: dev
  type: ClusterIP
