auth/auth-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: auth
  labels:
    k8s-app: auth
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 80
  - port: 1214
    name: grpc
    protocol: TCP
    targetPort: 1214
  selector:
    k8s-app: auth
  type: ClusterIP
