auth/auth-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: auth
  namespace: auth
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/grpc-backend: "true"
spec:
  tls:
  - secretName: auth-ingress-tls
    hosts:
    - auth.tech.dreamhack.se
  rules:
  - host: auth.tech.dreamhack.se
    http:
      paths:
      - path: /
        backend:
          serviceName: auth
          servicePort: grpc
